# slowotlok-backend-rust

./: .env  Cargo.toml
migrations/2024-04-07-190857_create_cards/: down.sql  up.sql
src/: io.rs  lib.rs  logic.rs  main.rs  messages.rs  ui.rs
src/lib/: card.rs  dtos.rs  lib.rs  models.rs  repo.rs  repository.rs  repository_sqlite.rs  schema.rs  simple_repository.rs
src/ui/: manage_words.rs  test.rs
