[package]
name = "slowotlok-backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
colored = "2.1.0"
cursive = "0.20.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }

[[bin]]
name = "slowotlok-cursive"
path = "src/bin/slowotlok-cursive/main.rs"

[[bin]]
name = "slowotlok-axum"
path = "src/bin/slowotlok-axum/main.rs"

[lib]
path = "src/lib/lib.rs"
